Fixed some alignment issues and size of font.

--- a/css/keywords.css
+++ b/css/keywords.css
@@ -42,7 +42,7 @@
 #keywords > button {  
     margin: 3.5%;
     width: 26.33%;
-    padding: 10px;
+    padding: 0px;
     background-color: rgba(0, 0, 0, 0);  /*completely transparent background colour */
 }
 
@@ -109,7 +109,7 @@
 @media only screen and (max-width: 545px) { 
     .keywords-btn, 
     #submit-btn {
-        font-size: 0.7em;
+        font-size: 0.65em;
     }
 }
 
